--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -98,6 +98,7 @@ body {
 .content-card {
   background-color: rgba(255, 255, 255, 0.7);
   backdrop-filter: blur(5px);
+  overflow-wrap: break-word; 
 }
 
 .content-card h2,
@@ -270,4 +271,8 @@ body {
     font-family: 'Raleway', sans-serif; 
     font-weight: 700; 
     font-size: 1rem;
+}
+.dark-card {
+  background-color: rgba(0, 0, 0, 0.7);
+  backdrop-filter: blur(5px);
 }
