--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -3,6 +3,7 @@ body {
   font-family: 'Roboto', sans-serif;
   background-color: #e8f5e9;
 }
+
 #background-carousel,
 #background-carousel-gestion,
 #background-carousel-servicios,
@@ -44,6 +45,7 @@ body {
   object-fit: cover;
 }
 
+/* --- Barra de navegación --- */
 .transparent-navbar {
   background-color: transparent !important;
   box-shadow: none !important;
@@ -82,6 +84,17 @@ body {
 
 .logo-area-desktop .logo-desktop {
   width: 150px;
+}
+
+.logo-responsive {
+    max-width: 350px;
+    height: auto;
+}
+
+@media (max-width: 768px) {
+    .logo-responsive {
+        max-width: 80%;
+    }
 }
 
 .hero-section {
@@ -142,15 +155,6 @@ body {
   backdrop-filter: blur(5px);
 }
 
-.dark-card h2,
-.dark-card h4 {
-  color: #a5d6a7 !important;
-}
-
-.dark-card p {
-  color: #fff !important;
-}
-
 .sabias-que {
   background-color: rgba(0, 0, 0, 0.7);
   color: #fff;
@@ -200,6 +204,7 @@ body {
     height: 250px;
   }
 }
+
 .gestion-card {
   background-color: #000;
   color: #fff;
@@ -225,9 +230,4 @@ body {
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 1rem;
-}
-.logo-ingecap-responsive {
-  max-width: 350px;
-  width: 250%;
-  height: auto;
 }
