--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -249,3 +249,13 @@ body {
     border-radius: 50%;
     padding: 10px;
 }
+.logo-nosotros {
+  max-width: 220px;
+}
+
+@media (max-width: 768px) {
+  .logo-nosotros {
+    max-width: 140px;
+    margin-bottom: 20px;
+  }
+}
